<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/registrationActivity"
    android:background="@color/white"
    android:layout_gravity="start"
    tools:context=".RegistrationActivity">
    <include
        android:id="@+id/customToolbar"
        layout="@layout/custom_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/txtGoodbye"
        style="@style/CustomHighBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/dp_25"
        android:text="@string/goodbye"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_55"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customToolbar"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationmain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/txtreflect"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingEnd="@dimen/dp_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGoodbye"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/mainannimation" />
    <!--        app:lottie_rawRes="@raw/mainannimation" />-->

    <TextView
        android:id="@+id/txtreflect"
        style="@style/CustomHighBold"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/reflect"

        android:textSize="@dimen/sp_50"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txtwriteyour"/>

    <!-- TextView -->
    <TextView
        android:id="@+id/txtwriteyour"
        style="@style/CustomLow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_25"
        android:gravity="center"

        android:paddingBottom="@dimen/dp_15"
        android:text="@string/writeyourownjourney"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_15"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Button: Login -->


    <!-- Button: Register -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/CustomMedium"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/blue"
        android:text="@string/login"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/dp_25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        style="@style/CustomMedium"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginEnd="@dimen/dp_25"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/green"
        android:text="@string/register"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/dp_25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
