<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".questionresdatabase.QuestionsFragment">

    <TextView
        android:id="@+id/txtCombinedresponse"
        style="@style/CustomHighBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_25"
        android:text=""
        android:textSize="@dimen/sp_25"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitle"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnDone"
        style="@style/CustomLow"

        android:layout_width="65dp"
        android:layout_height="51dp"
        android:gravity="center"
        android:text="@string/Done"
        android:textColor="@color/grey"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/dp_5"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        style="@style/CustomHighBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EditJournal"
        android:textSize="@dimen/sp_35"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etTitle"
        app:layout_constraintEnd_toStartOf="@+id/btnDone"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.478" />

    <TextView
        android:id="@+id/etTitle"
        style="@style/CustomHighBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_25"
        android:text=""
        android:textSize="@dimen/sp_25"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />

    <TextView
        android:id="@+id/txtquestionNo"
        style="@style/CustomMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/etTitle"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toTopOf="@+id/etTitle"
        app:layout_constraintEnd_toEndOf="@+id/etTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabaddimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="52dp"
        android:src="@drawable/addphoto"
        app:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>